[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/Default/Default.theme" type="Theme" id=1]
[ext_resource path="res://hud/PauseMenu/PauseMenu.gd" type="Script" id=2]

[node name="PauseMenu" type="ColorRect"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 2 )
_sections_unfolded = [ "Pause", "Size Flags", "Theme" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 390.0
margin_top = 260.0
margin_right = 634.0
margin_bottom = 340.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="ButtonResume" type="Button" parent="CenterContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 244.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "RESUME_GAME"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[node name="ButtonMainMenu" type="Button" parent="CenterContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 42.0
margin_right = 244.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 5
size_flags_vertical = 5
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT_TO_MAIN_MENU"
flat = false
align = 1
_sections_unfolded = [ "Size Flags" ]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]


